# amx_conv

./: CMakeLists.txt  README.md  gemm_val.py  main.cpp  weight_block.py
docs/: GPU_arch.docx  bookmarks_7_17_24.html
src/: i_gemm_tpp.hpp  test_gemm.cpp  test_gemm.h
